# aporia-importer

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: bump-version.yml  deploy.yml  release.yml  tests.yml
charts/aporia-importer/: Chart.yaml  values.yaml
charts/aporia-importer/templates/: _helpers.tpl  config.yaml  cronjob.yaml  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
examples/: example-worker-spec.yaml  s3.yaml
src/aporia_importer/: config.py  data_loader.py  logging_utils.py  main.py
