[tool.poetry]
name = "aporia-importer"
version = "v1.0.17"
description = "Import data from cloud storage to Aporia"
authors = []
readme = "README.md"
repository = "https://github.com/aporia-ai/aporia-importer"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = "^1.5.0", python = "<3.8"}
dask = {extras = ["complete"], version = "^2021.6.0"}
PyYAML = "^5.4.1"
aporia = {extras = ["training", "pandas"], version = "^1.0.63"}
s3fs = {version = "^2021.6.0", optional = true}
fastparquet = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-mock = "^2.0.0"
flake8 = "^3.7.9"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
mypy = "^0.812"
flake8-annotations = "^2.0.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.1.2"
pytest-asyncio = "^0.14.0"
isort = "^5.6.4"

[tool.poetry.scripts]
aporia-importer = 'aporia_importer.main:main'

[tool.poetry.extras]
s3 = ["s3fs"]
all = ["s3fs"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
lexicographical = true
order_by_type = false
group_by_package = true
no_lines_before = ['LOCALFOLDER']
line_length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
